--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,52 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.column1 {
+  float: left;
+  width: 20vw;
+  margin: 0 25px 25px 100px;
+  background-color: #ffffff;
+  height: 100%;
+  -webkit-box-shadow: 0 0 15px 0 #222;
+          box-shadow: 0 0 15px 0 #222;
+}
+
+.column1 .profile .b1 {
+  padding: 5px 25px;
+}
+
+.column1 .profile--top .img img {
+  width: 100%;
+}
+
+.column2 {
+  margin: 25px 25px 25px 28vw;
+}
+
+.column2 .box {
+  margin-bottom: 25px;
+  padding: 5px 25px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 15px 0 #222;
+          box-shadow: 0 0 15px 0 #222;
+}
+
+.main {
+  background-color: aliceblue;
+  min-height: 100%;
+  line-height: 2;
+}
+
+.main h1 {
+  color: #222;
+}
+
+.main p, .main ul li, .main a {
+  text-decoration: none;
+  color: #2b2b2b;
+}
+/*# sourceMappingURL=main.css.map */
