--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,18 @@
 $primary-color: #222;
 $secondary-color: #2b2b2b;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+$userFonts: 'Poppins', sans-serif;
+
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+@mixin screen700 {
+    @media screen and (max-width: 700px){
+        @content;
+    }
 }
